--- a/JAVARAFA/index.html
+++ b/JAVARAFA/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olá</title>
 </head>
 <body>
-    <h1 id="ola"></h1>
+    <h1>Siga o prompt que aparecera ao clicar no botão</h1>
+    <button onclick="promp()">Clique Aqui Para Começar</button>
 
-    <script>
-        var nome = 'nicolas'
-        document.getElementById("ola").textContent = 'ola ' + nome
-    </script>
+    <script src="teste.js"></script>
     
 </body>
 </html>
