--- a/JAVARAFA/exercicios/index.html
+++ b/JAVARAFA/exercicios/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-    <h1>Siga o prompt que aparecera ao clicar no botão</h1>
-    <button onclick="promp()">Clique Aqui Para Começar</button>
+  <div class="container">
+    <div class="item">
+  
+      <h1>SOCORRO MECANICO</h1>
+      <h2>O veiculo sofreu pane ?</h2>
+      <button onclick="mostrarTexto()">Sim</button>
+      <button onclick="nao()">Nao</button>
+      <div id="mensagem"></div>
+    </div>
 
-    <script src="teste.js"></script>
-    
+  </div>
+  
+
+  <script>
+    function mostrarTexto() {
+      document.getElementById("mensagem").innerHTML = "Olá! Você clicou no botão.";
+    }
+  </script>
 </body>
 </html>
