--- a/ex-01/index.html
+++ b/ex-01/index.html
@@ -7,13 +7,18 @@
     <style>
 
         body{
-            background-color: aquamarine;
+            
+            text-align: center;
         }
     </style>
 </head>
 <body>
     <h1>Olá Mundo!!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad tempora voluptatem iste, dolorem nesciunt sapiente earum rem provident quis omnis minus eius harum expedita nam reiciendis nobis inventore aliquid voluptates?</p>
+    <p id="texto" ></p>
+    <button onclick="alertahello()" >Clique Aqui</button>
+
+    <script src="indes.js"></script>
     
 </body>
 </html>
